Customer moved to administration

--- a/app/views/administration/customers/show.html.erb
+++ b/app/views/administration/customers/show.html.erb
@@ -34,5 +34,5 @@
   <%= @customer.address.nation %>
 </p>
 
-<%= link_to 'Edit', edit_customer_path(@customer) %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Edit', edit_administration_customer_path(@customer) %> |
+<%= link_to 'Back', administration_customers_path %>
