Empty cart + real product to cart

--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -20,4 +20,7 @@
   <%= @product.quantity %>
 </p>
 
+<%= link_to 'Add product to cart', addItemToCart_path(@product) %>
+
+
 <%= link_to 'Back', catalog_path %>
