--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= link_to item.product.name, showProduct_path(item.product) %></td>
         <td><%= number_to_currency(item.product.price) %></td>
         <td><%= item.quantity %></td>
-        <td><%= link_to 'Add 1 to quantity', addItemToCart_path(item.product) %> - <%= link_to 'Remove 1 to quantity', subItemToCart_path(item.product) %></td>
+        <td><%= link_to 'Add 1 to quantity', addItemToCart_path(item.product) %> - <%= link_to 'Remove 1 to quantity', subItemToCart_path(item.product) %> - <%= link_to 'Remove this product', emptyCart_path %></td>
       </tr>
     <% end %>
     <% if @cartItems.empty? %>
