--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <ul>
         <li><%= link_to 'Mostra carrello', cart_path %></li>
         <li><%= link_to 'Guarda i prodotti', catalog_path %></li>
+        <li><%= link_to 'Guarda i tuoi ordini', orders_path %></li>
     </ul>
 
 <% else %>
