Orders administration + backend layout + backend security

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <li><%= link_to 'Mostra carrello', cart_path %></li>
         <li><%= link_to 'Guarda i prodotti', catalog_path %></li>
         <li><%= link_to 'Guarda i tuoi ordini', orders_path %></li>
+        <li><%= link_to 'Logout', logout_path %></li>
     </ul>
 
 <% else %>
