--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -14,12 +14,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class"navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" hred="#"> 
         CartOnRails
       </a>
@@ -40,15 +34,15 @@
 </div>
 
 
-<h1>Listing products</h1>
+<h1>Prodotti</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Quantity</th>
+      <th>Nome</th>
+      <th>Descrizione</th>
+      <th>Prezzo</th>
+      <th>Quantità</th>
       <th colspan="3"></th>
     </tr>
   </thead>
