--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,13 @@
  * file per style scope.
  *
  *= require_tree .
- *= require_self
  */
+
+
+body { padding-top: 70px; }
+
+
+.login-block {
+    width: 40%;
+    min-width: 300px;
+}
