--- a/app/views/administration/login.html.erb
+++ b/app/views/administration/login.html.erb
@@ -1,13 +1,14 @@
-<p id="alert"><%= alert %></p>
+<div class="login-block center-block">
+    <%= form_tag administration_checkLogin_path do %>
+        <div class="form-group">
+            <%= label_tag :nickname %>
+            <%= text_field_tag :nickname, params[:nickname], class: 'form-control' %>
+        </div>
 
-<%= form_tag administration_checkLogin_path do %>
-    <p>
-         <%= label_tag :nickname %><br />
-         <%= text_field_tag :nickname, params[:nickname] %>
-    </p>
-  <p>
-    <%= label_tag :password %><br />
-    <%= password_field_tag :password %>
-  </p>
-  <p class="button"><%= submit_tag "Log in" %></p>
-<% end %>
+        <div class="form-group">
+            <%= label_tag :password %>
+            <%= password_field_tag :password, nil, class: 'form-control' %>
+        </div>
+        <%= submit_tag "Log in", class: 'btn btn-default' %>
+    <% end %>
+</div>
