--- a/app/views/administration/products/index.html.erb
+++ b/app/views/administration/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing products</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -18,9 +18,19 @@
         <td><%= product.description %></td>
         <td><%= product.price %></td>
         <td><%= product.quantity %></td>
-        <td><%= link_to 'Show', [:administration, product] %></td>
-        <td><%= link_to 'Edit', edit_administration_product_path(product) %></td>
-        <td><%= link_to 'Destroy', [:administration, product], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to [:administration, product], class: 'btn btn-default' do %>
+          <span class="glyphicon glyphicon-search"></span> Show
+          <% end %>
+
+          <%= link_to edit_administration_product_path(product), class: 'btn btn-default' do %>
+          <span class="glyphicon glyphicon-pencil"></span> Edit
+          <% end %>
+
+          <%= link_to [:administration, product], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
+          <span class="glyphicon glyphicon-remove"></span> Destroy
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_administration_product_path %>
+<%= link_to 'New Product', new_administration_product_path, class: 'btn btn-info' %>
