--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -25,8 +25,14 @@
         <li><%= link_to 'Carrello', cart_path %></li>
         <li><%= link_to 'Ordini', orders_path %></li>
         <li><%= link_to 'Logout', logout_path %></li>
+        <div class="pull-right">
+           <p class="navbar-text"> Ciao <%= @_current_user.nickname %>.</p>
+        </div>
         <% else %>
         <li><%= link_to 'Login', login_path %></li>
+        <div class="pull-right">
+           <p class="navbar-text">Ciao Anonimo.</p>
+        </div>
         <% end %>
       </ul>
     </div>
