--- a/app/views/administration/customers/_form.html.erb
+++ b/app/views/administration/customers/_form.html.erb
@@ -11,50 +11,50 @@
         </div>
     <% end %>
 
-    <div class="field">
+    <div class="form-group">
         <%= f.label :name %><br>
-        <%= f.text_field :name %>
+        <%= f.text_field :name, class: 'form-control' %>
     </div>
-    <div class="field">
+    <div class="form-group">
         <%= f.label :surname %><br>
-        <%= f.text_field :surname %>
+        <%= f.text_field :surname, class: 'form-control' %>
     </div>
-    <div class="field">
+    <div class="form-group">
         <%= f.label :birthdate %><br>
-        <%= f.datetime_select :birthdate %>
+        <%= f.datetime_select :birthdate, class: 'form-control' %>
     </div>
-    <div class="field">
+    <div class="form-group">
         <%= f.label :nickname %><br>
-        <%= f.text_field :nickname %>
+        <%= f.text_field :nickname, class: 'form-control' %>
     </div>
-    <div class="field">
+    <div class="form-group">
         <%= f.label :password %><br>
-        <%= f.text_field :password %>
+        <%= f.text_field :password, class: 'form-control' %>
     </div>
 
     <%= f.fields_for :address do |a| %>
-        <div class="field">
+        <div class="form-group">
             <%= a.label :street %><br>
-            <%= a.text_field :street %>
+            <%= a.text_field :street, class: 'form-control' %>
         </div>
-        <div class="field">
+        <div class="form-group">
             <%= a.label :city %><br>
-            <%= a.text_field :city %>
+            <%= a.text_field :city, class: 'form-control' %>
         </div>
-        <div class="field">
+        <div class="form-group">
             <%= a.label :state %><br>
-            <%= a.text_field :state %>
+            <%= a.text_field :state, class: 'form-control' %>
         </div>
-        <div class="field">
+        <div class="form-group">
             <%= a.label :nation %><br>
-            <%= a.text_field :nation %>
+            <%= a.text_field :nation, class: 'form-control' %>
         </div>
-        <div class="field">
+        <div class="form-group">
             <%= a.label :zipcode %><br>
-            <%= a.text_field :zipcode %>
+            <%= a.text_field :zipcode, class: 'form-control' %>
         </div>
     <% end %>
-    <div class="actions">
-        <%= f.submit %>
-    </div>
+  <div class="actions">
+    <%= f.submit 'Save', class: 'btn btn-success' %>
+  </div>
 <% end %>
