--- a/app/views/administration/customers/new.html.erb
+++ b/app/views/administration/customers/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New customer</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', administration_customers_path %>
+<br />
+<%= link_to administration_customers_path, class: 'btn btn-info' do %>
+<span class="glyphicon glyphicon-arrow-left"></span> Back to the list
+<% end %>
