--- a/app/views/administration/orders/index.html.erb
+++ b/app/views/administration/orders/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Listing orders</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Data Creazione</th>
       <th>Data Evasione</th>
-      <th colspan="4"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -13,8 +13,12 @@
     <% @orders.each do |order| %>
       <tr>
         <td><%= order.created_at.to_formatted_s(:short) %></td>
-        <td> <% if order.evaded %><%= order.updated_at.to_formatted_s(:short) %><% else %> Non Evaso <% end %></td>
-        <td><%= link_to 'Show', administration_order_path(order) %></td>
+        <td><% if order.evaded %><%= order.updated_at.to_formatted_s(:short) %><% else %> Non Evaso <% end %></td>
+        <td>
+          <%= link_to administration_order_path(order), class: 'btn btn-default' do %>
+          <span class="glyphicon glyphicon-search"></span> Show
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
