--- a/app/views/administration/products/show.html.erb
+++ b/app/views/administration/products/show.html.erb
@@ -1,22 +1,29 @@
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<h1>Product details</h1>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+<table class="table table-striped">
+    <tr>
+        <th class="text-right" width="30%">Name:</th>
+        <td><%= @product.name %></td>
+    </tr>
+    <tr>
+        <th class="text-right">Description:</th>
+        <td><%= @product.description %></td>
+    </tr>
+    <tr>
+        <th class="text-right">Price:</th>
+        <td><%= @product.price %></td>
+    </tr>
+    <tr>
+        <th class="text-right">Quantity:</th>
+        <td><%= @product.quantity %></td>
+    </tr>
+</table>
 
-<p>
-  <strong>Quantity:</strong>
-  <%= @product.quantity %>
-</p>
+<%= link_to administration_products_path, class: 'btn btn-info' do %>
+<span class="glyphicon glyphicon-arrow-left"></span> Back to the list
+<% end %>
 
-<%= link_to 'Edit', edit_administration_product_path(@product) %> |
-<%= link_to 'Back', administration_products_path %>
+<%= link_to edit_administration_product_path(@product), class: 'btn btn-default' do %>
+<span class="glyphicon glyphicon-pencil"></span> Edit
+<% end %>
