--- a/app/views/administration/providers/new.html.erb
+++ b/app/views/administration/providers/new.html.erb
@@ -2,4 +2,7 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', administration_providers_path %>
+<br />
+<%= link_to administration_providers_path, class: 'btn btn-info' do %>
+<span class="glyphicon glyphicon-arrow-left"></span> Back to the list
+<% end %>
