--- a/app/views/administration/providers/index.html.erb
+++ b/app/views/administration/providers/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Listing providers</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Vat</th>
+      <th>VAT</th>
       <th>Address</th>
       <th colspan="3"></th>
     </tr>
@@ -22,14 +22,23 @@
           <%= provider.address.state %>,
           <%= provider.address.nation %>
         </td>
-        <td><%= link_to 'Show', [:administration, provider] %></td>
-        <td><%= link_to 'Edit', edit_administration_provider_path(provider) %></td>
-        <td><%= link_to 'Destroy', [:administration, provider], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to [:administration, provider], class: 'btn btn-default' do %>
+          <span class="glyphicon glyphicon-search"></span> Show
+          <% end %>
+
+          <%= link_to edit_administration_provider_path(provider), class: 'btn btn-default' do %>
+          <span class="glyphicon glyphicon-pencil"></span> Edit
+          <% end %>
+
+          <%= link_to [:administration, provider], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
+          <span class="glyphicon glyphicon-remove"></span> Destroy
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Provider', new_administration_provider_path %>
+<%= link_to 'New Customer', new_administration_provider_path, class: 'btn btn-info' %>
