--- a/app/views/administration/customers/_form.html.erb
+++ b/app/views/administration/customers/_form.html.erb
@@ -1,15 +1,14 @@
 <%= form_for([:administration, @customer]) do |f| %>
-    <% if @customer.errors.any? %>
-        <div id="error_explanation">
-            <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
-
-            <ul>
-            <% @customer.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-            </ul>
-        </div>
-    <% end %>
+  <% if @customer.errors.any? %>
+    <div class="alert alert-danger">
+      <h4><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h4>
+      <ul>
+      <% @customer.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
     <div class="form-group">
         <%= f.label :name %><br>
