--- a/app/views/application/login.html.erb
+++ b/app/views/application/login.html.erb
@@ -33,13 +33,13 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li>Ciao Anonimo.</li>
+                    <li class="navbar-text">Ciao Anonimo.</li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
+<div class="container">
 
 <p id="alert"><%= alert %></p>
 
@@ -54,3 +54,7 @@
   </p>
   <p class="button"><%= submit_tag "Log in" %></p>
 <% end %>
+
+</div>
+</body>
+</html>
