--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -41,7 +41,7 @@
                     <% if @_current_user %>
                     <li><a href="/logout">Ciao <%= @_current_user.nickname %>.(Logout)</a></li>
                     <% else %>
-                    <li>Ciao Anonimo.</li>
+                    <li class="navbar-text">Ciao Anonimo.</li>
                     <% end %>
                 </ul>
             </div>
