piccola modifica al login

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,10 @@
  * file per style scope.
  *
  *= require_tree .
- *= require_self
- *= require bootstrap.min 
-*/
+ */
+
+
+.login-block {
+    width: 40%;
+    min-width: 300px;
+}
