finito il login

--- a/app/views/application/login.html.erb
+++ b/app/views/application/login.html.erb
@@ -41,7 +41,7 @@
 
 <div class="container">
 
-<p id="alert" class="alert alert-danger"><%= alert %></p>
+<div class="alert alert-danger"><%= alert %></div>
 <div class="login-block center-block">
 <%= form_tag checkLogin_path do %>
 	<div class="form-group">
