--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -71,7 +71,7 @@
         <td><%= product.description %></td>
         <td><%= product.price %></td>
         <td><%= product.quantity %></td>
-        <td><%= link_to 'Show', showProduct_path(product) %></td>
+        <td><%= link_to 'Show', showProduct_path(product), class="glyphicon glyphicon-search" %></td>
       </tr>
     <% end %>
   </tbody>
