--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-
+<div class="container">
 
 <h1>Cart</h1>
 
@@ -56,7 +56,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Product</th>
@@ -72,7 +72,19 @@
         <td><%= link_to item.product.name, showProduct_path(item.product) %></td>
         <td><%= number_to_currency(item.product.price) %></td>
         <td><%= item.quantity %></td>
-        <td><%= link_to 'Add 1 to quantity', addItemToCart_path(item.product) %> - <%= link_to 'Remove 1 to quantity', subItemToCart_path(item.product) %> - <%= link_to 'Remove this product', emptyCart_path %></td>
+        <td>
+          <div class="btn-group">
+          <%= link_to 'Add 1 to quantity', addItemToCart_path(item.product), :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-plus-sign"></span> 
+          <% end %>
+          <%= link_to 'Remove 1 to quantity', subItemToCart_path(item.product), :class => "btn btn-default"  do%>
+          <span class="glyphicon glyphicon-minus-sign"></span>
+          <% end %> 
+          <%= link_to 'Remove this product', emptyCart_path, :class => "btn btn-default"  do%>          
+          <span class="glyphicon glyphicon-remove-circle"></span>
+          <% end %>
+          </td>
+          <div>
       </tr>
     <% end %>
     <% if @cartItems.empty? %>
@@ -86,5 +98,8 @@
 </table>
 
 <% unless @cartItems.empty? %>
-<%= link_to 'Checkout', checkoutCart_path %>
+<%= link_to 'Checkout', checkoutCart_path, :class => "btn btn-default" %>
 <% end %>
+</div>
+</body>
+</html>
