--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -74,14 +74,14 @@
         <td><%= item.quantity %></td>
         <td>
           <div class="btn-group">
-          <%= link_to 'Add 1 to quantity', addItemToCart_path(item.product), :class => "btn btn-default" do%>
-          <span class="glyphicon glyphicon-plus-sign"></span> 
+          <%= link_to addItemToCart_path(item.product), :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-plus-sign">Aggiungi 1</span> 
           <% end %>
-          <%= link_to 'Remove 1 to quantity', subItemToCart_path(item.product), :class => "btn btn-default"  do%>
-          <span class="glyphicon glyphicon-minus-sign"></span>
+          <%= link_to subItemToCart_path(item.product), :class => "btn btn-default"  do%>
+          <span class="glyphicon glyphicon-minus-sign">Rimuovi 1</span>
           <% end %> 
-          <%= link_to 'Remove this product', emptyCart_path, :class => "btn btn-default"  do%>          
-          <span class="glyphicon glyphicon-remove-circle"></span>
+          <%= link_to emptyCart_path, :class => "btn btn-danger"  do%>          
+          <span class="glyphicon glyphicon-remove-circle">Rimuovi tutti</span>
           <% end %>
           </td>
           <div>
@@ -98,7 +98,7 @@
 </table>
 
 <% unless @cartItems.empty? %>
-<%= link_to 'Checkout', checkoutCart_path, :class => "btn btn-default" %>
+<%= link_to 'Checkout', checkoutCart_path, :class => "btn btn-info" %>
 <% end %>
 </div>
 </body>
