--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -49,7 +49,7 @@
     </nav>
 
 
-
+<div class="container">
 
 <p id="notice"><%= notice %></p>
 
@@ -73,7 +73,12 @@
   <%= @product.quantity %>
 </p>
 
-<%= link_to 'Add product to cart', addItemToCart_path(@product) %>
+ <%= link_to addItemToCart_path(@product), class: 'btn btn-success' do%>
+ <span class="glyphicon glyphicon-ok-circle"></span> Add to cart
+ <% end %>
 
 
-<%= link_to 'Back', catalog_path %>
+<%= link_to 'Back', catalog_path, class: 'btn btn-default' %>
+</div>
+</body>
+</html>
