--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -78,7 +78,10 @@
  <% end %>
 
 
-<%= link_to 'Back', catalog_path, class: 'btn btn-default' %>
+<%= link_to catalog_path, class: 'btn btn-default' do%>
+<span class="glyphicon glyphicon-arrow-left"></span>Back
+<% end %>
+
 </div>
 </body>
 </html>
