--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,49 @@
   <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
   <!-- -->
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
+
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Cart on Rails</a>
+            </div>
+
+            <div class="collapse navbar-collapse" >
+                <ul class="nav navbar-nav">
+                    <li><a href="/catalog">Guarda i prodotti</a></li>
+                    <li class="active"><a href="/login">Login</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-text">Ciao Anonimo.</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+<div class="container">
+
+<% if notice %>
+<div class="alert alert-success"><%= notice %></div>
+<% end %>
+<%if alert %>
+<div class="alert alert-danger"><%= alert %></div>
+<% end %>
+
 <%= yield %>
 
+</div>
 </body>
 </html>
