--- a/app/views/application/login.html.erb
+++ b/app/views/application/login.html.erb
@@ -1,9 +1,3 @@
-<html lang="it">
-<head>
-</head>
-<body>
-
-
 <div class="login-block center-block">
 <%= form_tag checkLogin_path do %>
 	<div class="form-group">
@@ -12,10 +6,8 @@
   	</div>
   <div class="form-group">
     <%= label_tag :password %><br />
-    <%= password_field_tag :password, class: 'form-control' %>
+    <%= password_field_tag :password, nil, class: 'form-control' %>
   </div>
   <%= submit_tag "Log in", class: 'btn btn-default' %>
 <% end %>
 </div>
-</body>
-</html>
