altri cambiamenti alla view

--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -5,7 +5,7 @@
   <p><%= @product.description %></p>
 
   <h5><strong>Price:</strong></h5>
-  <p><%= @product.price %></p>
+  <p><%= number_to_currency(@product.price) %></p>
 
 
   <h5><strong>Quantity:</strong></h5>
