--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
-        <td><%= product.price %></td>
+        <td><%= number_to_currency(product.price) %></td>
         <td><%= product.quantity %></td>
         <td>
           <%= link_to showProduct_path(product), class: 'btn btn-default' do %>
