--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -39,6 +39,13 @@
           Nessun prodotto nel carrello
         </td>
       </tr>
+    <% else %>
+      <tr>
+        <td></td>
+        <td><%= number_to_currency(@cartItems.map{ |i| i.product.price*i.quantity }.sum) %></td>
+        <td></td>
+        <td></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
