--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -8,7 +8,7 @@
       <th>Product</th>
       <th>Quantity</th>
       <th>Price</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -21,16 +21,16 @@
         <td>
           <div class="btn-group">
           <%= link_to addItemToCart_path(item.product), :class => "btn btn-default" do%>
-          <span class="glyphicon glyphicon-plus-sign">Aggiungi 1</span> 
+          <span class="glyphicon glyphicon-plus-sign"></span>  Aggiungi 1
           <% end %>
           <%= link_to subItemToCart_path(item.product), :class => "btn btn-default"  do%>
-          <span class="glyphicon glyphicon-minus-sign">Rimuovi 1</span>
+          <span class="glyphicon glyphicon-minus-sign"></span> Rimuovi 1
           <% end %> 
           <%= link_to emptyCart_path, :class => "btn btn-danger"  do%>          
-          <span class="glyphicon glyphicon-remove-circle">Rimuovi tutti</span>
+          <span class="glyphicon glyphicon-remove-circle"></span> Rimuovi tutti
           <% end %>
           <div>
-          </td>
+        </td>
       </tr>
     <% end %>
     <% if @cartItems.empty? %>
