--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -6,15 +6,15 @@
 
 <p><strong>Price:</strong> <%= number_to_currency(@product.price) %></p>
 
-
 <p><strong>Quantity:</strong> <%= @product.quantity %></p>
 
+<p><strong>Provided by:</strong> <%= @product.providers.map{|p| p.name}.join(', ') %></p>
 
-<%= link_to addItemToCart_path(@product), class: 'btn btn-success' do%>
+<%= link_to addItemToCart_path(@product), class: 'btn btn-success' do %>
 <span class="glyphicon glyphicon-ok-circle"></span> Add to cart
 <% end %>
 
 
-<%= link_to catalog_path, class: 'btn btn-default' do%>
+<%= link_to catalog_path, class: 'btn btn-default' do %>
 <span class="glyphicon glyphicon-arrow-left"></span> Back
 <% end %>
