--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CartOnRails</title>
 
+    <%= favicon_link_tag 'favicon.png' %>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= csrf_meta_tags %>
@@ -48,7 +49,7 @@
                     <% if @_current_user %>
                     <li><a href="/logout">Ciao <%= @_current_user.nickname %> - Logout</a></li>
                     <% else %>
-                    <li class="navbar-text">Ciao Anonimo.</li>
+                    <li class="navbar-text">Ciao Anonimo</li>
                     <% end %>
                 </ul>
             </div>
